fix: set token to local storage

--- a/apps/api/src/templates/registrationEmail.hbs
+++ b/apps/api/src/templates/registrationEmail.hbs
@@ -5,7 +5,7 @@
     <title>Email Confirmation</title>
   </head>
   <body>
-    <h1>Welcome to Purwadhika, Hello {{username}}</h1>
+    <h1>Welcome to Tokopedya, {{email}}</h1>
     {{!-- <button onclick={() => <a href={{url}} />} >Verify</button> --}}
     <a href={{url}}>Verify</a>
   </body>
