feat: fix icon and logo

--- a/apps/api/src/templates/registrationEmail.hbs
+++ b/apps/api/src/templates/registrationEmail.hbs
@@ -67,7 +67,7 @@
               Please confirm your email address. This ensures we have the right
               email in case we need to contact you.
             </p>
-            <a href="" target="_blank"
+            <a href={{url}} target="_blank"
               ><button
                 style="
                   width: 100%;
