feat: create sales report be

--- a/apps/api/src/templates/resetPasswordEmail.hbs
+++ b/apps/api/src/templates/resetPasswordEmail.hbs
@@ -67,7 +67,7 @@
               Please confirm your reset password. This ensures you have the right
               password to sign in.
             </p>
-            <a href="" target="_blank"
+            <a href={{url}} target="_blank"
               ><button
                 style="
                   width: 100%;
