--- a/apps/api/src/templates/paymentReminder.hbs
+++ b/apps/api/src/templates/paymentReminder.hbs
@@ -51,7 +51,7 @@
         >
           <div style="width: 100%; max-width: 422px; margin: 0 auto">
             <h1 style="margin: 0; font-size: 24px; color: #1f1f1f">
-              Payment Reminder
+              Payment Reminder at Mind Groceries
             </h1>
             <p
               style="
@@ -67,11 +67,11 @@
               One last step before we deliver your Package to your place!
             </p>
                <p style="margin: 0; margin-top: 17px; font-weight: 500">
-              Please Transfer {{totalPrice}} to below account number:
+              Please Transfer <strong>Rp. {{totalPrice}}</strong> to below account number: <br/>
               <strong>Bank Mandiri (126.000.1234.5678)</strong>
             </p> 
-            <a href="" target="_blank"
-              ><button
+            <a href={{url}} target="_blank">
+              <button
                 style="
                   width: 100%;
                   max-width: 288px;
@@ -87,8 +87,8 @@
                 "
               >
                 Finish Payment
-              </button></a
-            >
+              </button>
+              </a>
           </div>
         </div>
 
@@ -113,7 +113,7 @@
           Mind Groceries
         </p>
         <div style="margin: 0; margin-top: 16px">
-          <a href="" target="_blank" style="display: inline-block">
+          <a href="#" target="_blank" style="display: inline-block">
             <img
               width="36px"
               alt="Facebook"
@@ -121,7 +121,7 @@
             />
           </a>
           <a
-            href=""
+            href="#"
             target="_blank"
             style="display: inline-block; margin-left: 8px"
           >
@@ -131,7 +131,7 @@
               src="https://archisketch-resources.s3.ap-northeast-2.amazonaws.com/vrstyler/1661504218208_684135/email-template-icon-instagram"
           /></a>
           <a
-            href=""
+            href="#"
             target="_blank"
             style="display: inline-block; margin-left: 8px"
           >
@@ -142,7 +142,7 @@
             />
           </a>
           <a
-            href="{{url}}"
+            href="#"
             target="_blank"
             style="display: inline-block; margin-left: 8px"
           >
