--- a/apps/api/src/templates/registrationEmail.hbs
+++ b/apps/api/src/templates/registrationEmail.hbs
@@ -51,7 +51,7 @@
         >
           <div style="width: 100%; max-width: 422px; margin: 0 auto">
             <h1 style="margin: 0; font-size: 24px; color: #1f1f1f">
-              Confirm New Email address
+              Confirm Email address
             </h1>
             <p
               style="
@@ -64,8 +64,7 @@
               Hey {{email}},
             </p>
             <p style="margin: 0; margin-top: 17px; font-weight: 500">
-              Please confirm your email address. This ensures we have the right
-              email in case we need to contact you.
+              Please confirm your email address. This Email will be your credential to sign in to Mind Groceries.
             </p>
             <a href={{url}} target="_blank"
               ><button
@@ -83,7 +82,7 @@
                   cursor: pointer;
                 "
               >
-                Verify New Email
+                Verify Email
               </button></a
             >
           </div>
@@ -139,7 +138,7 @@
             />
           </a>
           <a
-            href="{{url}}"
+            href=""
             target="_blank"
             style="display: inline-block; margin-left: 8px"
           >
